--- a/package.json
+++ b/package.json
@@ -27,16 +27,17 @@
     "d3": "^7.9.0",
     "geist": "^1.3.1",
     "json2csv": "^6.0.0-alpha.2",
+    "keyword-extractor": "^0.0.28",
     "lucide-react": "^0.456.0",
     "ml-hclust": "^3.1.0",
     "ml-matrix": "^6.12.0",
-    "next": "15.0.3",
+    "next": "^15.0.3",
     "next-themes": "^0.4.3",
     "openai": "^4.72.0",
     "papaparse": "^5.4.1",
     "python-shell": "^5.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-heatmap-grid": "^0.9.1",
     "react-hotkeys-hook": "^4.6.1",
     "react-markdown": "^9.0.1",
