--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "d3": "^7.9.0",
+    "dotenv": "^16.4.7",
     "geist": "^1.3.1",
     "json2csv": "^6.0.0-alpha.2",
     "keyword-extractor": "^0.0.28",
@@ -49,6 +50,7 @@
   },
   "devDependencies": {
     "@types/d3": "^7.4.3",
+    "@types/dotenv": "^6.1.1",
     "@types/json2csv": "^5.0.7",
     "@types/node": "^20",
     "@types/papaparse": "^5.3.15",
