--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@radix-ui/react-tabs": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.3",
     "ai": "^3.4.33",
-    "chart.js": "^4.4.6",
+    "chart.js": "^4.4.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -56,6 +56,7 @@
     "@types/node": "^20",
     "@types/papaparse": "^5.3.15",
     "@types/react": "^18",
+    "@types/react-chartjs-2": "^2.0.2",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
