--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "spicex",
   "version": "0.1.0",
+  "type": "module",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -9,6 +10,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.39.0",
+    "@huggingface/inference": "^3.6.2",
+    "@mistralai/mistralai": "^1.5.2",
     "@nivo/scatterplot": "^0.88.0",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.2",
@@ -63,7 +67,8 @@
     "eslint-config-next": "15.0.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.3"
   },
   "optionalDependencies": {
     "python-env": "^1.0.0"
