--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "next": "^15.1.7",
     "next-themes": "^0.4.3",
     "openai": "^4.72.0",
+    "p-limit": "^6.2.0",
     "papaparse": "^5.4.1",
     "python-shell": "^5.0.0",
     "react": "^18.3.1",
