--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,10 +1,11 @@
 [phases.setup]
-nixPkgs = ["nodejs", "python3", "pip"]
+nixPkgs = ["nodejs" "python3"]
 
 [phases.install]
 cmds = [
   "npm install",
-  "pip install -r app/python/requirements.txt"
+  "python3 -m ensurepip",
+  "python3 -m pip install -r app/python/requirements.txt"
 ]
 
 [phases.build]
