--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -4,7 +4,7 @@ nixPkgs = ["nodejs", "python3", "python3Packages.pip"]
 [phases.install]
 cmds = [
   "npm install",
-  "python3 -m pip install -r app/python/requirements.txt"
+  "python3 -m pip install -r requirements.txt"
 ]
 
 [phases.build]
