--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,10 +1,10 @@
 [phases.setup]
-nixPkgs = ["nodejs", "python3", "python3Packages.pip"]
+nixPkgs = ["nodejs", "python311Full"]
 
 [phases.install]
 cmds = [
   "npm install",
-  "python3 -m pip install -r requirements.txt"
+  "python3 -m pip install --no-cache-dir -r requirements.txt"
 ]
 
 [phases.build]
