--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -5,7 +5,7 @@ nixPkgs = [
   "python311Packages.numpy",
   "python311Packages.scipy",
   "python311Packages.sklearn",
-  "python311Packages.sentence_transformers",
+  "python311Packages.sentence-transformers",
   "python311Packages.nltk",
   "python311Packages.requests"
 ]
