--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start --hostname 0.0.0.0 --port ${PORT:-10000}",
+    "start": "next start --hostname 0.0.0.0 --port $PORT",
     "lint": "next lint"
   },
   "dependencies": {
